# AiWorkflowActions

./: .gitignore  .gitmodules  CLAUDE.md  README.md  cli.py  config.yml  local.config.yml.example  pyproject.toml
.run/: Claude3 Code Translation.run.xml  SimpleDsl.run.xml  ty check.run.xml
resources/: SimpleDsl.yml
src/ai_workflow_action/: __init__.py  ai_workflow_action.py  client.py  config_loader.py  context_builder.py  dsl_file.py  models.py  node_prompts.py  node_type_util.py  parallel_service.py  validator.py  workflow_core.py
src/dify_core/: __init__.py
src/dify_core/app/app_config/: __init__.py  entities.py
src/dify_core/workflow/: __init__.py
src/dify_core/workflow/entities/: __init__.py  variable_entities.py
src/dify_core/workflow/graph_engine/: __init__.py
src/dify_core/workflow/graph_engine/entities/: __init__.py  graph.py
src/dify_core/workflow/nodes/: __init__.py  enums.py
src/dify_core/workflow/nodes/base/: __init__.py  entities.py  exc.py
src/dify_core/workflow/nodes/code/: __init__.py  entities.py
src/dsl_model/: __init__.py  app_models.py  core.py  dsl.py  enums.py  features.py  graph.py  models.py  nodes.py  utils.py
src/evaluation/: __init__.py  models.py  pipeline.py
src/evaluation/phases/: __init__.py  analyzer.py  dataset_builder.py  llm_judge.py  node_generator.py  user_message_gen.py  workflow_validator.py
src/evaluation/prompts/: llm_judge_eval.txt  user_message_inference.txt
src/evaluation/utils/: __init__.py
src/next_node_prediction/: __init__.py  cli.py  node_generator.py  validator.py
(+12 files in other folders)
