[project]
name = "AiWorkflowActions"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.40.0",
    "python-dotenv==1.0.1",
    "pydantic~=2.11.4",
    "pyyaml~=6.0.1",
    "ty>=0.0.1a20",
]

[project.scripts]
cli = "next_node_prediction.cli:main"

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
